Make the favorite icon tab aware.